# mn-tp2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  install_eigen.sh  requirements.txt
experimentation/: GridSearch.ipynb  KNNPCA_test.ipynb
experimentation/.ipynb_checkpoints/: GridSearch-checkpoint.ipynb
notebooks/: custom_gridsearch.ipynb  custom_gridsearch_pca_once.ipynb  data_viz.ipynb  exp.py  exploratorio.ipynb  knn.py  pca.py  plots.ipynb  test.py
notebooks/experiments/: knn.txt  knn_pca.txt  var_images_amount.txt  varia_k_fold.txt  varies_k_by_train_amount.txt
src/: knn.cpp  knn.h  knn.hpp  knn.py  knn_with_pca.py  main.cpp  pca.cpp  pca.hpp  pca.py  types.h  types.hpp  utils.cpp  utils.hpp
